--- a/MoodGallery/gallery/templates/myboard.html
+++ b/MoodGallery/gallery/templates/myboard.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +8,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<link href="{% static 'css/custom.css' %}" rel="stylesheet">
+<link href="{% static 'css/templatemo.css' %}" rel="stylesheet">
+<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+
+<style>
+    .nav{
+        width : 1500px;
+        height : 70px;
+        background-color: beige;
+    }
+
+    .container-1{
+        width : 1500px;
+        height : 600px;
+
+        background-color:burlywood;
+        text-align: center;
+        padding-top: 40px;
+        padding-bottom : 20px
+    }
+
+    
+    .container-2{
+        width : 1500px;
+        height : 300px;
+
+        background-color:rgb(229, 227, 194);
+        text-align: center;
+        padding-top: 10px;
+        padding-bottom : 20px
+    }
+    
+</style>
+
+
 <body>
-    그 뭐냐 그 사진 눌렀을때 나오는 페이지 임담다맘
+
+    <!-- 대충 네브바 들어갈곳 -->
+    <div class='nav'>
+        <div class='row'>
+            <div style='float:left'>
+                <h2>Mood Gallery</h2>
+            </div>
+            <div style='float:right'>
+                <h2>Home Popular Themes About Login</h2>
+            </div>    
+        </div>
+    </div>
+
+    <!-- 그림과 설명 -->
+    <div class='container-1'>
+        힘들었을거에요
+        지금 이시간만큼은 걱정하지 말아요
+        당신이 최고에요
+        그것만 생각하세요
+    </div>
+
+    <!-- 댓글이 들어감 -->
+    <div class='container-2'>
+        댓글
+    </div>
+
+
 </body>
 </html>
