--- a/MoodGallery/gallery/templates/myboard.html
+++ b/MoodGallery/gallery/templates/myboard.html
@@ -9,36 +9,82 @@
     <title>Document</title>
 </head>
 
-<link href="{% static 'css/custom.css' %}" rel="stylesheet">
-<link href="{% static 'css/templatemo.css' %}" rel="stylesheet">
-<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 
 <style>
-    .nav{
-        width : 1500px;
-        height : 70px;
-        background-color: beige;
+
+    header{
+        position: fixed;
+        width:100%;
+        height:70px;
+        margin-top:0;
+        background-color: white;
     }
 
-    .container-1{
-        width : 1500px;
-        height : 600px;
+    .home{
+        float: left;
+        font-size: 2em;
+        line-height: 1;
+    }
 
-        background-color:burlywood;
+    .inner{
+        position: relative;
+        max-width: 1320px;
+        margin:0 auto;
+        padding:20px 20px;
+    }
+
+    .menu{
+        float: right;
+        margin-right: 10px;
+    }
+
+    li{
+        float: left;
+        margin-left: 60px;
+        font-size: 1em;
+        letter-spacing: 0.1em 
+    }
+
+    a{text-decoration:none; color:black}
+    li{list-style-type:none; color:black}
+
+    
+
+    nav{
+        display: block;
+    }
+
+
+
+/* ------------------------------------------ */
+
+    .container-1{
+    
         text-align: center;
-        padding-top: 40px;
-        padding-bottom : 20px
+        padding-top: 100px;
+        padding-bottom : 40px;
+        margin-top: 0px;
+    }
+
+    .mainimage{
+        width:100%;
+        border: 3px solid; 
+        padding: 3px 3px 3px 3px;
     }
 
     
     .container-2{
-        width : 1500px;
-        height : 300px;
+        text-align: left;
+        padding-top: 50px;
+        padding-bottom : 50px;
+        padding-left : 50px;
+    }
 
-        background-color:rgb(229, 227, 194);
-        text-align: center;
-        padding-top: 10px;
-        padding-bottom : 20px
+    .comment{
+        margin-top: 10px;
+        margin-bottom : 10px;
     }
     
 </style>
@@ -46,29 +92,85 @@
 
 <body>
 
-    <!-- 대충 네브바 들어갈곳 -->
-    <div class='nav'>
-        <div class='row'>
-            <div style='float:left'>
-                <h2>Mood Gallery</h2>
-            </div>
-            <div style='float:right'>
-                <h2>Home Popular Themes About Login</h2>
-            </div>    
+    <header>
+        <div class="inner">
+            <p class="home">
+                <a href="#">Mood Gallery</a>
+            </p>
+            <nav class="menu">
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Popular</a>
+                    </li>
+                    <li>
+                        <a href="#">Themes</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Login</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- 그림과 설명 -->
+    <div class="container container-1">
+
+        <div class="container mainimage">
+            <img src="{% static 'img/우유니.jpg' %}" width="100%" height="600px">
+        </div>
+        
+        <div style="margin-top:50px;">
+            <p>힘들었을거에요</br>
+            지금 이시간만큼은 걱정하지 말아요</br>
+            당신이 최고에요</br>
+            그것만 생각하세요</p>
         </div>
     </div>
 
-    <!-- 그림과 설명 -->
-    <div class='container-1'>
-        힘들었을거에요
-        지금 이시간만큼은 걱정하지 말아요
-        당신이 최고에요
-        그것만 생각하세요
+    <!-- 댓글이 들어감 -->
+    <div class="container container-2" style="border:3px solid rgb(171, 173, 173);">
+        
+        <div class="row comment">
+            <div class="col-auto">
+                <img src="{% static 'img/셀카.jpg' %}" width="50px" height="50px">
+            </div>
+            <div class="col-auto">
+                <p style="font-size: 15px;">작성자명<p>
+                <p style="font-size: 15px;">내용이 들어간다 내용이 들어갈 곳이다 그렇다고 했다 나는ㄴㄴ 모르겠다 하 이거 어디서 부터 시작해야되는지 으아이인</p>
+            </div>
+        </div>
+
+        <div class="row comment">
+            <div class="col-auto">
+                <img src="{% static 'img/셀카.jpg' %}" width="50px" height="50px">
+            </div>
+            <div class="col-auto">
+                <p style="font-size: 15px;">작성자명<p>
+                <p style="font-size: 15px;">내용이 들어간다 내용이 들어갈 곳이다 그렇다고 했다 나는ㄴㄴ 모르겠다 하 이거 어디서 부터 시작해야되는지 으아이인</p>
+                </div>
+        </div>
     </div>
 
-    <!-- 댓글이 들어감 -->
-    <div class='container-2'>
-        댓글
+    <div class="container container-2">
+        <div class="row comment">
+            <div class="col-auto">
+                <img src="{% static 'img/셀카.jpg' %}" width="50px" height="50px">
+            </div>
+            <div class="col-auto">
+                <p style="font-size: 15px;">작성자명<p>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" style="width:1100px" placeholder="댓글 입력" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">추가</button>
+                </div>
+            </div>
+        </div>
     </div>
 
 
